force-app/main/default/objects/Cities_Data__c/Cities_Data__c.object-meta.xml
<CustomObject>
    <label>Cities Data</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Cities Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cities Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>