force-app/main/default/objects/Cities_Data__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send to Council</fullName>
            </value>
            <value>
                <fullName>Get Quote</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>