force-app/main/default/objects/Cities_Data__c/fields/City_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>City_Issue_Type__c</fullName>
    <label>City Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fly-Tipping</fullName>
            </value>
            <value>
                <fullName>Broken Light</fullName>
            </value>
            <value>
                <fullName>Pot-Holes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>