force-app/main/default/objects/Cities_Data__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cities Data</relationshipLabel>
    <relationshipName>Cities_Data</relationshipName>
    <type>Lookup</type>
</CustomField>